--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 # See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
-name = "my-package"
+name = "capybara-nuclear"
 dynamic = ["version"]
 readme = "README.md"
 classifiers = [
@@ -19,15 +19,16 @@ authors = [
 ]
 requires-python = ">=3.8"
 dependencies = [
-  # Add your own dependencies here
+    "openmc",
+    "iapws"
 ]
 license = {file = "LICENSE"}
 
 [project.urls]
-Homepage = "https://github.com/allenai/python-package-template"
-Repository = "https://github.com/allenai/python-package-template"
-Changelog = "https://github.com/allenai/python-package-template/blob/main/CHANGELOG.md"
-# Documentation = "https://my-package.readthedocs.io/"
+Homepage = "https://github.com/Kladdy/capybara-nuclear"
+Repository = "https://github.com/Kladdy/capybara-nuclear"
+Changelog = "https://github.com/Kladdy/capybara-nuclear/blob/main/CHANGELOG.md"
+# Documentation = "https://capybara-nuclear.readthedocs.io/"
 
 [project.optional-dependencies]
 dev = [
@@ -65,10 +66,10 @@ exclude = [
 include-package-data = true
 
 [tool.setuptools.package-data]
-my_package = ["py.typed"]
+capybara_nuclear = ["py.typed"]
 
 [tool.setuptools.dynamic]
-version = {attr = "my_package.version.VERSION"}
+version = {attr = "capybara_nuclear.version.VERSION"}
 
 [tool.black]
 line-length = 100
