Add Core models with tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,7 +112,7 @@ module = "tests.*"
 strict_optional = false
 
 [tool.pytest.ini_options]
-testpaths = "tests/"
+testpaths = "tests/cn"
 python_classes = [
   "Test*",
   "*Test"
