--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,12 @@ authors = [
 requires-python = ">=3.8"
 dependencies = [
     "openmc",
-    "iapws"
+    "iapws",
+    "loguru",
+    "numpy",
+    "pytest",
+    "pytest-cov",
+    "mashumaro",
 ]
 license = {file = "LICENSE"}
 
@@ -66,10 +71,10 @@ exclude = [
 include-package-data = true
 
 [tool.setuptools.package-data]
-capybara_nuclear = ["py.typed"]
+cn = ["py.typed"]
 
 [tool.setuptools.dynamic]
-version = {attr = "capybara_nuclear.version.VERSION"}
+version = {attr = "cn.version.VERSION"}
 
 [tool.black]
 line-length = 100
